Added new test with data, and fix a problem with breeze vectors.