@@ -1,27 +1,27 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <version>1.4</version>
+  <version>1.4.0</version>
   <name>${project.artifactId}</name>
   <groupId>sramirez</groupId>
   <artifactId>spark-infotheoretic-feature-selection</artifactId>
-  <inceptionYear>2015</inceptionYear>
+  <inceptionYear>2016</inceptionYear>
   <properties>
     <maven.compiler.source>1.6</maven.compiler.source>
     <maven.compiler.target>1.6</maven.compiler.target>
     <encoding>UTF-8</encoding>
     <scala.tools.version>2.11</scala.tools.version>
-    <scala.version>2.11.8</scala.version>
+    <scala.version>2.11.6</scala.version>
   </properties>  
   <dependencies>
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_2.11</artifactId>
-      <version>2.0.0</version>
+      <version>2.1.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-mllib_2.11</artifactId>
-      <version>2.0.0</version>
+      <version>2.1.0</version>
     </dependency>
     <dependency>
       <groupId>org.scala-lang</groupId>
@@ -35,6 +35,17 @@
       <version>2.2.6</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+         <groupId>junit</groupId>
+         <artifactId>junit</artifactId>
+         <version>4.12</version>
+         <scope>test</scope>
+    </dependency>
+    <dependency>
+	  <groupId>joda-time</groupId>
+	  <artifactId>joda-time</artifactId>
+	  <version>2.9.4</version>
+	</dependency>
   </dependencies>
 
   <build>
@@ -42,64 +53,40 @@
     <testSourceDirectory>src/test/scala</testSourceDirectory>
     <plugins>
       <plugin>
+        <!-- see http://davidb.github.com/scala-maven-plugin -->
         <groupId>net.alchim31.maven</groupId>
         <artifactId>scala-maven-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
+        <version>3.1.3</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>compile</goal>
+              <goal>testCompile</goal>
+            </goals>
+            <configuration>
+              <args>
+                <!-- <arg>-make:transitive</arg>  -->
+                <arg>-dependencyfile</arg>
+                <arg>${project.build.directory}/.scala_dependencies</arg>
+              </args>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.19.1</version>
-        <!-- Note config is repeated in scalatest config -->
+        <version>2.13</version>
         <configuration>
+          <useFile>false</useFile>
+          <disableXmlReport>true</disableXmlReport>
+          <!-- If you have classpath issue like NoDefClassError,... -->
+		  <!-- useManifestOnlyJar>false</useManifestOnlyJar -->
           <includes>
-            <include>**/Test*.java</include>
-            <include>**/*Test.java</include>
-            <include>**/*TestCase.java</include>
-            <include>**/*Suite.java</include>
+            <include>**/*Test.*</include>
+            <include>**/*Suite.*</include>
           </includes>
-          <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
-          <argLine>-Xmx3g -Xss4096k -XX:MaxPermSize=${MaxPermGen} -XX:ReservedCodeCacheSize=512m</argLine>
-          <environmentVariables>
-            <!--
-              Setting SPARK_DIST_CLASSPATH is a simple way to make sure any child processes
-              launched by the tests have access to the correct test-time classpath.
-            -->
-            <SPARK_DIST_CLASSPATH>${test_classpath}</SPARK_DIST_CLASSPATH>
-            <SPARK_PREPEND_CLASSES>1</SPARK_PREPEND_CLASSES>
-            <SPARK_SCALA_VERSION>${scala.binary.version}</SPARK_SCALA_VERSION>
-            <SPARK_TESTING>1</SPARK_TESTING>
-            <JAVA_HOME>${test.java.home}</JAVA_HOME>
-          </environmentVariables>
-          <systemProperties>
-            <log4j.configuration>file:src/test/resources/log4j.properties</log4j.configuration>
-            <derby.system.durability>test</derby.system.durability>
-            <java.awt.headless>true</java.awt.headless>
-            <java.io.tmpdir>${project.build.directory}/tmp</java.io.tmpdir>
-            <spark.test.home>${spark.test.home}</spark.test.home>
-            <spark.testing>1</spark.testing>
-            <spark.master.rest.enabled>false</spark.master.rest.enabled>
-            <spark.ui.enabled>false</spark.ui.enabled>
-            <spark.ui.showConsoleProgress>false</spark.ui.showConsoleProgress>
-            <spark.unsafe.exceptionOnMemoryLeak>true</spark.unsafe.exceptionOnMemoryLeak>
-            <spark.memory.debugFill>true</spark.memory.debugFill>
-            <!-- Needed by sql/hive tests. -->
-            <test.src.tables>src</test.src.tables>
-          </systemProperties>
-          <failIfNoTests>false</failIfNoTests>
-          <excludedGroups>${test.exclude.tags}</excludedGroups>
         </configuration>
-        <executions>
-          <execution>
-            <id>test</id>
-            <goals>
-              <goal>test</goal>
-            </goals>
-          </execution>
-        </executions>
       </plugin>
     </plugins>
   </build>
